--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "firebase": "^12.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
-    "next": "15.4.5",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
