feat: Enhance order tracking and dish details with support for extras
- Updated `SuiviCommande` component to handle 'complement_divers' type dishes, adjusting price calculations and display names accordingly.
- Modified `DishDetailsModalComplex` to differentiate between regular dishes and extras, including visual enhancements for extras.
- Refactored `FormattedDisplay` and `DishList` components to accommodate new dish types and improve UI consistency.
- Introduced new hooks in `useSupabaseData` for managing extras, including fetching, creating, updating, and deleting extras.
- Added `supabaseStorage` utility for image uploads, including validation, resizing, and public URL generation.
- Updated Supabase types to include extras and their respective database structure.
- Enhanced error handling and logging throughout the application for better debugging and user feedback.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "docker:status": "docker ps",
+    "docker:clean:supalocal": "docker-compose --file \"C:\\Users\\USER\\mcp\\supabase-migration\\docker-compose.yml\" down"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -44,12 +46,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
