--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "docker:clean:supalocal": "docker-compose --file \"C:\\Users\\USER\\mcp\\supabase-migration\\docker-compose.yml\" down"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
+    "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.42",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -41,19 +44,19 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.12",
-    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query": "^5.90.2",
+    "ai": "^5.0.60",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^12.0.0",
+    "firebase": "^12.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
-    "next": "^15.5.2",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
