--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "lint": "next lint",
     "test:e2e": "playwright test",
     "docker:status": "docker ps",
-    "docker:clean:supalocal": "docker-compose --file \"C:\\Users\\USER\\mcp\\supabase-migration\\docker-compose.yml\" down"
+    "docker:clean:supalocal": "docker-compose --file \"C:\\Users\\USER\\mcp\\supabase-migration\\docker-compose.yml\" down",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:pull": "prisma db pull",
+    "prisma:push": "prisma db push",
+    "prisma:validate": "prisma validate",
+    "prisma:format": "prisma format",
+    "prisma:test": "tsx tests/prisma-crud.test.ts",
+    "email:dev": "email dev",
+    "db:check": "node -e \"import('./lib/prisma').then(m => m.checkDatabaseConnection()).then(r => console.log('✅ Connection:', r))\""
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.23",
@@ -42,10 +51,13 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "0.5.6",
+    "@react-email/preview-server": "4.3.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.90.2",
     "ai": "^5.0.60",
+    "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,15 +68,18 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "^15.5.4",
+    "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
+    "react-email": "4.3.0",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.6.1",
     "react-image-crop": "^11.0.10",
     "react-resizable-panels": "^3.0.4",
     "recharts": "^3.1.1",
+    "resend": "6.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -74,6 +89,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.4.6",
     "@playwright/test": "^1.55.0",
+    "@prisma/client": "^6.17.1",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -82,7 +98,9 @@
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
     "postcss": "^8.4.47",
+    "prisma": "^6.17.1",
     "tailwindcss": "^4.1.12",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
